--- a/app/designer/page.module.css
+++ b/app/designer/page.module.css
@@ -12,6 +12,7 @@
   font-size: 100px;
   color: #d3d3d3 !important;
   font-weight: 900;
+  padding-left: 20px;
 }
 
 .buttonOne {
@@ -36,4 +37,44 @@
   font-size: 300px;
   font-weight: 900;
   color: rgb(15, 15, 15);
+}
+
+@media only screen and (max-width: 768px) {
+  .head {
+    font-size: 40px;
+    color: #d3d3d3 !important;
+    font-weight: 900;
+  }
+  .buttonOne {
+    font-size: 10px !important;
+    color: #b3b3b3 !important;
+    border-radius: 0px !important;
+    letter-spacing: 2px;
+    height: 50px;
+    padding-right: 20px !important;
+    padding-left: 20px !important;
+    transition: padding-right 0.5s, padding-left 0.5s;
+  }
+  .knownTwo {
+    background-color: black;
+    padding-top: 200px !important;
+    /* padding-bottom: 200px !important; */
+    width: auto;
+  }
+  .con {
+    width: auto;
+    padding-left: 10px !important;
+  }
+  .showcase {
+    font-size: 70px;
+    font-weight: 900;
+    color: rgb(15, 15, 15);
+  }
+  .buttonOne:hover {
+    /* border-color: #9c9c9c; */
+    background-color: black !important;
+    cursor: default !important;
+    padding-right: 100px !important;
+    padding-left: 100px !important;
+  }
 }
