--- a/app/header/page.module.css
+++ b/app/header/page.module.css
@@ -1,3 +1,5 @@
+/* page.module.css */
+
 .header {
   position: sticky !important;
   top: 0;
@@ -33,4 +35,29 @@
   color: #d3d3d3 !important;
   border-radius: 50px !important;
   background-color: rgba(255, 255, 255, 0) !important;
+}
+
+@media (max-width: 768px) {
+  /* Adjustments for smaller screens */
+  .header {
+    height: auto;
+    padding: 10px;
+    justify-content: space-between;
+  }
+
+  .button {
+    width: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .contactme {
+    width: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .contact {
+    font-size: 30px;
+  }
 }
