--- a/app/homepage/page.module.css
+++ b/app/homepage/page.module.css
@@ -12,6 +12,7 @@
 }
 
 .button {
+  margin-top: 20px;
   width: 500px;
   height: 50px;
   border-radius: 50px !important;
@@ -132,27 +133,26 @@
 
 .back {
   background-color: #000000 !important;
+  line-height: 300px !important;
+  padding-top: 20px;
+  padding-bottom: 150px;
 }
 
 .scroll {
   color: #ffffff;
-  font-size: 100px;
+  font-size: 300px;
   font-weight: 900;
-  white-space: nowrap;
-  overflow: hidden;
   width: 100%;
-  /* animation: scrollAnimation 20s linear infinite; */
-  animation: scrollAnimation 20s linear infinite;
 }
 
-@keyframes scrollAnimation {
+/* @keyframes scrollAnimation {
   0% {
     transform: translateX(100%);
   }
   100% {
     transform: translateX(-100%);
   }
-}
+} */
 
 .imagepop {
   background-image: url("https://Mohanraj-Me.github.io/design/public/other/designold.png");
@@ -179,6 +179,9 @@
 
 .body {
   overflow: hidden;
+}
+.twoCon {
+  display: flex;
 }
 
 .showcase {
@@ -250,4 +253,135 @@
   padding-top: 80px;
   padding-bottom: 80px;
   padding-left: 100px;
+  padding-right: 100px;
+}
+
+@media (max-width: 768px) {
+  .hero {
+    padding-top: 100px !important;
+    padding-bottom: 0px !important;
+    line-height: 50px !important;
+  }
+
+  .design {
+    font-size: 50px;
+  }
+
+  .button {
+    width: auto;
+    padding-left: 50px !important;
+    padding-right: 50px !important;
+    border-radius: 50px !important;
+  }
+
+  .heroTwo {
+    background-color: rgb(0, 0, 0);
+    padding-top: 100px !important;
+    padding-bottom: 100px !important;
+  }
+
+  .para {
+    text-align: start;
+    font-size: 15px;
+    letter-spacing: 1px;
+    line-height: 35px;
+    color: #d3d3d3 !important;
+    width: auto;
+  }
+  .showcaseee {
+    /* text-align: center; */
+    align-items: center;
+    line-height: 90px !important;
+    font-size: 100px;
+    height: 600px;
+    font-weight: 900;
+    color: rgb(15, 15, 15);
+    background-color: #e4e4e4;
+  }
+  .showcasein {
+    height: 500px;
+    background-color: #141414;
+    margin: 10px;
+    border-radius: 50px;
+  }
+  .showcaseout {
+    height: 500px;
+    background-color: #ffffff;
+    margin: 10px;
+    border-radius: 50px;
+    width: auto;
+  }
+  .showcaseoutin {
+    height: 500px;
+    margin: 10px;
+    margin-top: 20px;
+    width: auto;
+    color: #d3d3d3;
+    background-color: #ececec00;
+    border-radius: 50px;
+    border-width: 20px;
+    border-style: solid;
+    border-color: #ffffff;
+  }
+
+  .dev {
+    font-size: 50px;
+    font-weight: 900;
+    color: #9c9c9c;
+    background-color: #00000000 !important;
+    border-color: #00000000 !important;
+    transition: letter-spacing 1s ease;
+  }
+  .dev:hover {
+    color: #dddddd;
+    letter-spacing: 10px;
+  }
+  .twoCon {
+    display: block;
+  }
+  .showcase {
+    background-color: #000000;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .back {
+    background-color: #000000 !important;
+    line-height: 100px !important;
+    padding-top: 150px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .scroll {
+    color: #ffffff;
+    font-size: 70px;
+    font-weight: 900;
+    width: 100%;
+    line-height: 60px;
+  }
+
+  .in {
+    padding: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  .intotext {
+    color: #000000;
+    font-size: 15px;
+    /* width: 900px; */
+  }
+
+  .butto {
+    color: #ffffff !important;
+    width: auto;
+    height: 50px !important;
+    background-color: #000000 !important;
+    border-style: none !important;
+    border-radius: 50px !important;
+  }
+}
+
+@media (max-width: 1024px) {
 }
