--- a/app/developer/page.module.css
+++ b/app/developer/page.module.css
@@ -19,6 +19,7 @@
 }
 
 .card {
+  padding: 40px;
   font-weight: 900;
   font-size: 70px;
   margin-top: 70px;
@@ -95,4 +96,118 @@
   cursor: default !important;
   padding-right: 200px !important;
   padding-left: 200px !important;
+}
+
+@media only screen and (max-width: 768px) {
+  .head {
+    font-size: 40px;
+    color: #d3d3d3 !important;
+    font-weight: 900;
+  }
+  .buttonOne {
+    font-size: 10px !important;
+    color: #b3b3b3 !important;
+    border-radius: 0px !important;
+    letter-spacing: 2px;
+    height: 50px;
+    padding-right: 20px !important;
+    padding-left: 20px !important;
+    transition: padding-right 0.5s, padding-left 0.5s;
+  }
+  .knownTwo {
+    background-color: black;
+    padding-top: 200px !important;
+    /* padding-bottom: 200px !important; */
+    width: auto;
+  }
+  .con {
+    width: auto;
+    padding-left: 0px !important;
+    padding-right: 10px !important;
+  }
+  .showcase {
+    font-size: 60px;
+    font-weight: 900;
+    color: rgb(15, 15, 15);
+  }
+  .buttonOne:hover {
+    /* border-color: #9c9c9c; */
+    background-color: black !important;
+    cursor: default !important;
+    padding-right: 20px !important;
+    padding-left: 20px !important;
+  }
+  .backer {
+    background-color: #000000;
+  }
+  .image img {
+    width: auto; /* Adjust the width as needed */
+    height: 300px !important; /* Maintain aspect ratio */
+  }
+
+  .projecthead {
+    align-items: end;
+  }
+
+  .card {
+    padding: 20px;
+    font-weight: 900;
+    font-size: 35px;
+    margin-top: 70px;
+    line-height: 100px;
+    width: 170px;
+    height: 400px;
+    color: black !important;
+    background-color: rgb(231, 231, 231);
+    border-radius: 30px;
+    transition: letter-spacing 1s ease;
+    border-color: rgba(240, 248, 255, 0) !important;
+  }
+
+  .card:hover {
+    background-color: rgb(181, 219, 77);
+    .gap {
+      margin-bottom: -45px !important;
+    }
+  }
+
+  .cardland1 {
+    font-weight: 900;
+    font-size: 70px;
+    margin-top: 70px;
+    width: 800px;
+    height: 400px;
+    color: black !important;
+    background-color: rgb(0, 0, 0);
+    border-radius: 30px;
+    transition: letter-spacing 1s ease;
+    border-color: rgba(240, 255, 255, 0) !important;
+  }
+
+  .cardland1:hover {
+    .gap {
+      margin-bottom: -45px !important;
+    }
+  }
+
+  .cardland {
+    font-weight: 900;
+    font-size: 35px;
+    /* margin-top: 70px; */
+    width: 400px;
+    height: 200px;
+    color: black !important;
+    background-color: rgb(255, 255, 255);
+    border-radius: 30px;
+    transition: letter-spacing 1s ease;
+    border-color: rgba(240, 255, 255, 0) !important;
+  }
+
+  .cardland:hover {
+    background-color: rgb(181, 219, 77);
+
+    .gap {
+      margin-bottom: -45px !important;
+    }
+  }
 }
