--- a/app/homepage/page.module.css
+++ b/app/homepage/page.module.css
@@ -292,40 +292,39 @@
     /* text-align: center; */
     align-items: center;
     line-height: 90px !important;
-    font-size: 100px;
+    font-size: 90px;
     height: 600px;
     font-weight: 900;
     color: rgb(15, 15, 15);
     background-color: #e4e4e4;
   }
   .showcasein {
-    height: 500px;
+    height: 400px;
     background-color: #141414;
-    margin: 10px;
+    margin: 30px;
     border-radius: 50px;
   }
   .showcaseout {
-    height: 500px;
-    background-color: #ffffff;
-    margin: 10px;
+    height: 400px;
+    background-color: #b8b8b8;
+    margin: 30px;
     border-radius: 50px;
     width: auto;
   }
   .showcaseoutin {
-    height: 500px;
-    margin: 10px;
-    margin-top: 20px;
+    height: 400px;
+    margin: 30px;
+    margin-top: 60px;
     width: auto;
     color: #d3d3d3;
-    background-color: #ececec00;
+    background-color: #ffffff;
     border-radius: 50px;
-    border-width: 20px;
-    border-style: solid;
-    border-color: #ffffff;
+    border-style: none;
+    border-color: #ffffff00;
   }
 
   .dev {
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 900;
     color: #9c9c9c;
     background-color: #00000000 !important;
@@ -342,7 +341,7 @@
   .showcase {
     background-color: #000000;
     width: 100%;
-    padding-top: 10px;
+    padding-top: 100px;
     padding-bottom: 10px;
   }
   .back {
@@ -371,6 +370,7 @@
     color: #000000;
     font-size: 15px;
     /* width: 900px; */
+    text-align: center;
   }
 
   .butto {
