--- a/app/developer/page.module.css
+++ b/app/developer/page.module.css
@@ -33,7 +33,7 @@
 }
 
 .card:hover {
-  background-color: rgb(181, 219, 77);
+  background-color: rgb(181, 219, 77) !important;
   .gap {
     margin-bottom: -45px !important;
   }
@@ -72,7 +72,7 @@
 }
 
 .cardland:hover {
-  background-color: rgb(181, 219, 77);
+  background-color: rgb(181, 219, 77) !important;
 
   .gap {
     margin-bottom: -45px !important;
