--- a/app/homepage/page.module.css
+++ b/app/homepage/page.module.css
@@ -1,7 +1,7 @@
 .hero {
   background-color: #000000;
   line-height: 150px;
-  padding-top: 250px !important;
+  padding-top: 200px !important;
   padding-bottom: 50px !important;
 }
 
@@ -13,6 +13,7 @@
 
 .button {
   margin-top: 20px;
+  margin-left: 20px;
   width: 500px;
   height: 50px;
   border-radius: 50px !important;
@@ -135,16 +136,24 @@
   background-color: #000000 !important;
   line-height: 300px !important;
   padding-top: 20px;
-  padding-bottom: 150px;
+  padding-bottom: 50px;
+  padding-left: 20px;
 }
 
 .scroll {
-  color: #ffffff;
+  color: #141414;
   font-size: 300px;
   font-weight: 900;
   width: 100%;
 }
 
+.journey {
+  /* height: 70px; */
+  border-radius: 100px;
+  font-size: 80px;
+  font-weight: 900;
+  color: #333333;
+}
 /* @keyframes scrollAnimation {
   0% {
     transform: translateX(100%);
@@ -171,7 +180,7 @@
 .butto {
   color: #ffffff !important;
   width: 450px;
-  height: 50px !important;
+  height: 60px !important;
   background-color: #000000 !important;
   border-style: none !important;
   border-radius: 50px !important;
@@ -182,20 +191,6 @@
 }
 .twoCon {
   display: flex;
-}
-
-.showcase {
-  background-color: #000000;
-  width: 100%;
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-
-.showcasein {
-  height: 900px;
-  background-color: #141414;
-  margin: 50px;
-  border-radius: 50px;
 }
 
 .dev {
@@ -210,6 +205,22 @@
 .dev:hover {
   color: #dddddd;
   letter-spacing: 20px;
+}
+
+.showcase {
+  background-color: #000000;
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 100px;
+  position: sticky;
+  top: 0;
+}
+
+.showcasein {
+  height: 900px;
+  background-color: #141414;
+  margin: 50px;
+  border-radius: 50px;
 }
 
 .showcaseout {
@@ -227,12 +238,12 @@
   height: 900px;
   font-size: 100px;
   color: #d3d3d3;
-  background-color: #ececec00;
+  background-color: #00000000;
+  border-style: solid;
+  border-width: 1px;
+
   margin: 50px;
   border-radius: 50px;
-  border-width: 20px;
-  border-style: solid;
-  border-color: #ffffff;
 }
 
 .showcasee {
@@ -242,11 +253,24 @@
   background-color: #1a1a1a;
 }
 
+.backtest {
+  z-index: -100;
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: #d3d3d3;
+}
+
 .showcaseee {
   font-size: 200px;
   font-weight: 900;
   color: rgb(15, 15, 15);
-  background-color: #e4e4e4;
+}
+
+.slideover {
+  height: 900px;
+  background-color: #f8000000;
 }
 
 .in {
@@ -272,6 +296,7 @@
     padding-left: 50px !important;
     padding-right: 50px !important;
     border-radius: 50px !important;
+    margin-left: 5px;
   }
 
   .heroTwo {
@@ -289,14 +314,14 @@
     width: auto;
   }
   .showcaseee {
-    /* text-align: center; */
+    text-align: center;
     align-items: center;
     line-height: 90px !important;
     font-size: 90px;
     height: 600px;
     font-weight: 900;
     color: rgb(15, 15, 15);
-    background-color: #e4e4e4;
+    /* background-color: #e4e4e4; */
   }
   .showcasein {
     height: 400px;
@@ -317,14 +342,13 @@
     margin-top: 60px;
     width: auto;
     color: #d3d3d3;
-    background-color: #ffffff;
     border-radius: 50px;
-    border-style: none;
-    border-color: #ffffff00;
+    border-style: solid;
+    border-width: 1px;
   }
 
   .dev {
-    font-size: 40px;
+    font-size: 50px;
     font-weight: 900;
     color: #9c9c9c;
     background-color: #00000000 !important;
@@ -333,7 +357,7 @@
   }
   .dev:hover {
     color: #dddddd;
-    letter-spacing: 10px;
+    letter-spacing: 0px;
   }
   .twoCon {
     display: block;
@@ -347,14 +371,14 @@
   .back {
     background-color: #000000 !important;
     line-height: 100px !important;
-    padding-top: 150px;
-    padding-bottom: 10px;
+    padding-top: 50px;
+    padding-bottom: 30px;
     padding-left: 10px;
     padding-right: 10px;
   }
 
   .scroll {
-    color: #ffffff;
+    color: #141414;
     font-size: 70px;
     font-weight: 900;
     width: 100%;
@@ -368,7 +392,7 @@
   }
   .intotext {
     color: #000000;
-    font-size: 15px;
+    font-size: 18px;
     /* width: 900px; */
     text-align: center;
   }
@@ -380,6 +404,15 @@
     background-color: #000000 !important;
     border-style: none !important;
     border-radius: 50px !important;
+  }
+
+  .backtest {
+    z-index: -100;
+    position: fixed;
+    top: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: #d3d3d3;
   }
 }
 
