--- a/app/uidesigner/page.module.css
+++ b/app/uidesigner/page.module.css
@@ -32,7 +32,7 @@
 }
 
 .card:hover {
-  background-color: rgb(181, 219, 77);
+  background-color: rgb(181, 219, 77) !important;
   .gap {
     margin-bottom: -45px !important;
   }
@@ -69,7 +69,7 @@
 }
 
 .cardland:hover {
-  background-color: rgb(181, 219, 77);
+  background-color: rgb(181, 219, 77) !important;
   .gap {
     margin-bottom: -45px !important;
   }
