--- a/app/designer/page.module.css
+++ b/app/designer/page.module.css
@@ -10,13 +10,13 @@
 
 .head {
   font-size: 100px;
-  color: #d3d3d3 !important;
+  color: #ffffff !important;
   font-weight: 900;
   padding-left: 20px;
 }
 
 .buttonOne {
-  color: #b3b3b3 !important;
+  color: #ffffff !important;
   border-radius: 0px !important;
   letter-spacing: 2px;
   height: 50px;
