--- a/app/developer/page.module.css
+++ b/app/developer/page.module.css
@@ -10,36 +10,38 @@
 
 .head {
   font-size: 100px;
-  color: #d3d3d3 !important;
+  color: #ffffff !important;
   font-weight: 900;
 }
 
-.projecthead {
+.projectheaddiv {
   align-items: end;
+  display: flex !important;
 }
 
 .card {
   padding: 40px;
   font-weight: 900;
-  font-size: 70px;
+  font-size: 60px;
   margin-top: 70px;
   width: 500px;
   height: 800px;
   color: black !important;
-  background-color: rgb(231, 231, 231);
+  background-color: rgb(255, 255, 255);
   border-radius: 50px;
   transition: letter-spacing 1s ease;
   border-color: rgba(240, 248, 255, 0) !important;
 }
 
 .card:hover {
-  background-color: rgb(181, 219, 77) !important;
+  background-color: rgb(255, 255, 255) !important;
   .gap {
-    margin-bottom: -45px !important;
+    margin-bottom: -35px !important;
   }
 }
 
 .cardland1 {
+  padding: 40px;
   font-weight: 900;
   font-size: 70px;
   margin-top: 70px;
@@ -59,8 +61,9 @@
 }
 
 .cardland {
+  padding: 40px;
   font-weight: 900;
-  font-size: 70px;
+  font-size: 60px;
   /* margin-top: 70px; */
   width: 800px;
   height: 400px;
@@ -72,15 +75,15 @@
 }
 
 .cardland:hover {
-  background-color: rgb(181, 219, 77) !important;
+  background-color: rgb(255, 255, 255) !important;
 
   .gap {
-    margin-bottom: -45px !important;
+    margin-bottom: -35px !important;
   }
 }
 
 .buttonOne {
-  color: #b3b3b3 !important;
+  color: #ffffff !important;
   border-radius: 0px !important;
   letter-spacing: 2px;
   height: 50px;
@@ -88,6 +91,10 @@
   padding-left: 0;
 
   transition: padding-right 0.5s, padding-left 0.5s;
+}
+.con {
+  padding-left: 0px !important;
+  padding-right: 10px !important;
 }
 
 .buttonOne:hover {
@@ -101,12 +108,12 @@
 @media only screen and (max-width: 768px) {
   .head {
     font-size: 40px;
-    color: #d3d3d3 !important;
+    color: #ffffff !important;
     font-weight: 900;
   }
   .buttonOne {
     font-size: 10px !important;
-    color: #b3b3b3 !important;
+    color: #ffffff !important;
     border-radius: 0px !important;
     letter-spacing: 2px;
     height: 50px;
@@ -121,6 +128,7 @@
     width: auto;
   }
   .con {
+    /* display: flex; */
     width: auto;
     padding-left: 0px !important;
     padding-right: 10px !important;
@@ -140,13 +148,19 @@
   .backer {
     background-color: #000000;
   }
+  .align {
+    align-items: center;
+    justify-content: center;
+  }
   .image img {
     width: auto; /* Adjust the width as needed */
     height: 300px !important; /* Maintain aspect ratio */
   }
 
-  .projecthead {
-    align-items: end;
+  .projectheaddiv {
+    display: flex;
+    flex-direction: column; /* Ensures flex items stack horizontally */
+    justify-content: flex-start; /* Aligns items to the start of the container */
   }
 
   .card {
@@ -155,7 +169,7 @@
     font-size: 35px;
     margin-top: 70px;
     line-height: 100px;
-    width: 170px;
+    width: 250px;
     height: 400px;
     color: black !important;
     background-color: rgb(231, 231, 231);
@@ -172,16 +186,18 @@
   }
 
   .cardland1 {
+    padding: 20px;
     font-weight: 900;
-    font-size: 70px;
+    font-size: 35px;
     margin-top: 70px;
-    width: 800px;
+    line-height: 100px;
+    width: 250px;
     height: 400px;
     color: black !important;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(231, 231, 231);
     border-radius: 30px;
     transition: letter-spacing 1s ease;
-    border-color: rgba(240, 255, 255, 0) !important;
+    border-color: rgba(240, 248, 255, 0) !important;
   }
 
   .cardland1:hover {
@@ -191,16 +207,18 @@
   }
 
   .cardland {
+    padding: 20px;
     font-weight: 900;
     font-size: 35px;
-    /* margin-top: 70px; */
-    width: 400px;
-    height: 200px;
+    margin-top: 70px;
+    line-height: 100px;
+    width: 250px;
+    height: 400px;
     color: black !important;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(231, 231, 231);
     border-radius: 30px;
     transition: letter-spacing 1s ease;
-    border-color: rgba(240, 255, 255, 0) !important;
+    border-color: rgba(240, 248, 255, 0) !important;
   }
 
   .cardland:hover {
