--- a/app/header/page.module.css
+++ b/app/header/page.module.css
@@ -12,12 +12,12 @@
 }
 
 .home {
-  color: #d3d3d3 !important;
+  color: #ffffff !important;
   cursor: pointer;
 }
 
 .contact {
-  color: #1f1f1f !important;
+  color: #000000 !important;
   cursor: pointer;
   font-size: 40px;
   font-weight: 900 !important;
@@ -32,7 +32,7 @@
 
 .button {
   width: 200px;
-  color: #d3d3d3 !important;
+  color: #ffffff !important;
   border-radius: 50px !important;
   background-color: rgba(255, 255, 255, 0) !important;
 }
