--- a/app/homepage/page.module.css
+++ b/app/homepage/page.module.css
@@ -8,7 +8,7 @@
 .design {
   font-size: 200px;
   font-weight: 900;
-  color: #d3d3d3 !important;
+  color: #ffffff !important;
 }
 
 .button {
@@ -34,7 +34,7 @@
 .para {
   font-size: 30px;
   line-height: 60px;
-  color: #d3d3d3 !important;
+  color: #ffffff !important;
   width: 1500px;
 }
 
@@ -141,7 +141,7 @@
 }
 
 .scroll {
-  color: #141414;
+  color: #131313;
   font-size: 300px;
   font-weight: 900;
   width: 100%;
@@ -196,29 +196,43 @@
 .dev {
   font-size: 150px;
   font-weight: 900;
-  color: #9c9c9c;
+  color: #ffffff;
   background-color: #00000000 !important;
   border-color: #00000000 !important;
   transition: letter-spacing 1s ease;
 }
 
 .dev:hover {
-  color: #dddddd;
+  color: #ffffff;
+  letter-spacing: 20px;
+}
+
+.devui {
+  font-size: 150px;
+  font-weight: 900;
+  color: #000000;
+  background-color: #00000000 !important;
+  border-color: #00000000 !important;
+  transition: letter-spacing 1s ease;
+}
+
+.devui:hover {
+  color: #000000;
   letter-spacing: 20px;
 }
 
 .showcase {
-  background-color: #000000;
+  background-color: #ffffff;
   width: 100%;
-  padding-top: 50px;
-  padding-bottom: 100px;
+  /* padding-top: 50px; */
+  padding-bottom: 200px;
   position: sticky;
   top: 0;
 }
 
 .showcasein {
   height: 900px;
-  background-color: #141414;
+  background-color: #000000;
   margin: 50px;
   border-radius: 50px;
 }
@@ -228,7 +242,10 @@
   height: 900px;
   font-size: 100px;
   color: #d3d3d3;
-  background-color: #ffffff;
+  background-color: #00000000;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #000000;
   margin: 50px;
   border-radius: 50px;
 }
@@ -237,11 +254,11 @@
   width: 50%;
   height: 900px;
   font-size: 100px;
-  color: #d3d3d3;
+  color: #000000;
   background-color: #00000000;
   border-style: solid;
-  border-width: 1px;
-
+  border-width: 2px;
+  border-color: #ffffff;
   margin: 50px;
   border-radius: 50px;
 }
@@ -249,8 +266,8 @@
 .showcasee {
   font-size: 200px;
   font-weight: 900;
-  color: rgb(15, 15, 15);
-  background-color: #1a1a1a;
+  color: rgb(227, 227, 227);
+  background-color: #ffffff;
 }
 
 .backtest {
@@ -259,7 +276,7 @@
   top: 0;
   height: 100vh;
   width: 100%;
-  background-color: #d3d3d3;
+  background-color: #ffffff;
 }
 
 .showcaseee {
@@ -270,7 +287,7 @@
 
 .slideover {
   height: 900px;
-  background-color: #f8000000;
+  background-color: showcaseee#f8000000;
 }
 
 .in {
@@ -310,15 +327,15 @@
     font-size: 15px;
     letter-spacing: 1px;
     line-height: 35px;
-    color: #d3d3d3 !important;
+    color: #ffffff !important;
     width: auto;
   }
   .showcaseee {
     text-align: center;
     align-items: center;
     line-height: 90px !important;
-    font-size: 90px;
-    height: 600px;
+    font-size: 100px;
+    /* height: 600px; */
     font-weight: 900;
     color: rgb(15, 15, 15);
     /* background-color: #e4e4e4; */
@@ -331,7 +348,7 @@
   }
   .showcaseout {
     height: 400px;
-    background-color: #b8b8b8;
+    background-color: #ffffff;
     margin: 30px;
     border-radius: 50px;
     width: auto;
@@ -348,22 +365,37 @@
   }
 
   .dev {
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 900;
-    color: #9c9c9c;
+    color: #ffffff;
     background-color: #00000000 !important;
     border-color: #00000000 !important;
     transition: letter-spacing 1s ease;
   }
+
   .dev:hover {
-    color: #dddddd;
+    color: #ffffff;
     letter-spacing: 0px;
+  }
+
+  .devui {
+    font-size: 40px;
+    font-weight: 900;
+    color: #000000;
+    background-color: #00000000 !important;
+    border-color: #00000000 !important;
+    transition: letter-spacing 1s ease;
+  }
+
+  .devui:hover {
+    color: #000000;
+    letter-spacing: 00px;
   }
   .twoCon {
     display: block;
   }
   .showcase {
-    background-color: #000000;
+    background-color: #ffffff;
     width: 100%;
     padding-top: 100px;
     padding-bottom: 10px;
@@ -371,8 +403,8 @@
   .back {
     background-color: #000000 !important;
     line-height: 100px !important;
-    padding-top: 50px;
-    padding-bottom: 30px;
+    padding-top: 200px;
+
     padding-left: 10px;
     padding-right: 10px;
   }
@@ -392,7 +424,7 @@
   }
   .intotext {
     color: #000000;
-    font-size: 18px;
+    font-size: 15px;
     /* width: 900px; */
     text-align: center;
   }
@@ -412,7 +444,7 @@
     top: 0;
     height: 100vh;
     width: 100%;
-    background-color: #d3d3d3;
+    background-color: #ffffff;
   }
 }
 
