--- a/app/homepage/page.module.css
+++ b/app/homepage/page.module.css
@@ -233,7 +233,10 @@
 .showcasein {
   height: 900px;
   background-color: #000000;
-  margin: 50px;
+  /* margin: 50px; */
+  margin-bottom: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
   border-radius: 50px;
 }
 
@@ -334,16 +337,19 @@
     text-align: center;
     align-items: center;
     line-height: 90px !important;
-    font-size: 100px;
+    font-size: 80px;
     /* height: 600px; */
     font-weight: 900;
     color: rgb(15, 15, 15);
     /* background-color: #e4e4e4; */
   }
+
   .showcasein {
     height: 400px;
     background-color: #141414;
-    margin: 30px;
+    margin-bottom: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
     border-radius: 50px;
   }
   .showcaseout {
@@ -397,7 +403,7 @@
   .showcase {
     background-color: #ffffff;
     width: 100%;
-    padding-top: 100px;
+    /* padding-top: 100px; */
     padding-bottom: 10px;
   }
   .back {
