--- a/app/contact/page.module.css
+++ b/app/contact/page.module.css
@@ -61,9 +61,9 @@
     overflow: hidden;
   }
   .head {
-    margin-top: 60px;
+    /* margin-top: 60px; */
     color: #141414;
-    font-size: 70px;
+    font-size: 65px;
     font-weight: 900;
     width: 100%;
   }
