--- a/app/designer/page.module.css
+++ b/app/designer/page.module.css
@@ -56,15 +56,18 @@
     padding-left: 20px !important;
     transition: padding-right 0.5s, padding-left 0.5s;
   }
+  .padleft {
+    padding-left: 5px;
+  }
   .knownTwo {
     background-color: black;
     padding-top: 100px !important;
-    /* padding-bottom: 200px !important; */
-    width: auto;
+
+    /* width: auto; */
   }
   .con {
     width: auto;
-    padding-left: 10px !important;
+    padding-left: 20px !important;
     padding-right: 10px !important;
   }
   .showcase {
