--- a/app/header/page.module.css
+++ b/app/header/page.module.css
@@ -9,6 +9,7 @@
   width: 100%;
   background-color: #000000;
   z-index: 5 !important;
+  /* backdrop-filter: blur(10px); */
 }
 
 .home {
@@ -34,7 +35,7 @@
   width: 200px;
   color: #ffffff !important;
   border-radius: 50px !important;
-  background-color: rgba(255, 255, 255, 0) !important;
+  background-color: rgb(0, 0, 0) !important;
 }
 
 @media (max-width: 768px) {
