--- a/app/homepage/page.module.css
+++ b/app/homepage/page.module.css
@@ -1,137 +1,192 @@
 .hero {
-  background-color: #000000;
-  line-height: 150px;
-
-  padding-top: 200px !important;
+  background-color: #ffffff;
+  line-height: 130px;
+  padding-top: 120px !important;
   padding-bottom: 50px !important;
 }
 
-.design {
-  font-size: 200px;
-  font-weight: 900;
-  color: #ffffff !important;
+.fixed {
+  z-index: -100;
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: #ffffff;
+  line-height: 170px;
 }
 
-.button {
-  margin-top: 20px;
+.fixedHead {
+  font-size: 350px;
+  font-weight: 900;
+  color: #ebebeb;
+}
+
+/* hero */
+
+.heroHead {
+  font-size: 150px;
+  font-weight: 900;
+  color: #20323b !important;
+}
+
+.resumeButton {
+  margin-top: 70px;
   margin-left: 20px;
   width: 500px;
-  height: 50px;
+  height: 70px;
   border-radius: 50px !important;
+  font-size: 20px;
+  font-weight: 600;
+  border-style: none;
+  background-color: #f3f3f3 !important;
+  border-width: 5px;
+  color: #20323b !important;
 }
 
 .heroTwo {
-  background-color: rgb(0, 0, 0);
-  padding-top: 150px !important;
-  padding-bottom: 250px !important;
+  background-color: #ffffff;
+  padding-bottom: 180px !important;
 }
 
-.heroThree {
-  background-color: rgb(255, 255, 255);
-  padding-top: 50px !important;
-  padding-bottom: 150px !important;
-}
-
-.para {
-  font-size: 30px;
+.heroTwoPara {
+  font-size: 25px;
   line-height: 60px;
-  color: #ffffff !important;
-  width: 1500px;
-}
-
-.known {
-  padding-top: 250px !important;
-  padding-bottom: 300px !important;
-}
-
-.knownTwo {
-  background-color: black;
-  padding-top: 250px !important;
-  padding-bottom: 300px !important;
-}
-
-.knownThree {
-  background-color: black;
-  padding-top: 100px !important;
-  padding-bottom: 100px !important;
-}
-
-.buttonOne {
-  color: #b3b3b3 !important;
-  border-radius: 0px !important;
-  letter-spacing: 2px;
-  height: 50px;
-  padding-right: 0;
-  padding-left: 0;
-  transition: padding-right 0.5s, padding-left 0.5s;
-}
-
-.buttonOne:hover {
-  background-color: black;
-  padding-right: 200px !important;
-  padding-left: 200px !important;
-}
-
-.buttonTwo {
-  color: #383838 !important;
-  border-color: #dadada !important;
-  border-radius: 0px !important;
-  background-color: #ffffff !important;
-  letter-spacing: 2px;
-  height: 50px;
-  padding-right: 0;
-  padding-left: 0;
-  transition: padding-right 0.5s, padding-left 0.5s;
-}
-
-.buttonTwo:hover {
-  padding-right: 200px !important;
-  padding-left: 200px !important;
-}
-
-.head {
-  font-size: 100px;
-  color: #d3d3d3 !important;
-  font-weight: 900;
-}
-
-.mail {
-  font-size: 80px;
-  color: #d3d3d3 !important;
-  font-weight: 900;
-}
-
-.text {
-  color: #525252;
-  font-size: 30px;
+  color: #545958 !important;
   width: 1300px;
 }
 
+/* DEVELOPER */
+
+.developer {
+  background-color: #20323b;
+}
+
+.developerhero {
+  background-color: #d6cc9900;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.developerhead {
+  font-size: 100px;
+  color: rgb(255, 255, 255) !important;
+  font-weight: 900;
+  width: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.developercard {
+  justify-content: space-around;
+  margin: 100px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  padding: 40px;
+  font-weight: 900;
+  font-size: 60px;
+  width: 500px;
+  height: 800px;
+  color: #20323b !important;
+  background-color: rgb(255, 255, 255) !important;
+  border-radius: 50px;
+  transition: letter-spacing 1s ease;
+  border-color: rgba(240, 248, 255, 0) !important;
+}
+
+/* DESIGNER */
+
+.designer {
+  background-color: #ffffff55;
+  backdrop-filter: blur(10px);
+}
+
+.designerhero {
+  background-color: #d6cc9900;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.designerhead {
+  font-size: 100px;
+  color: #20323b !important;
+  font-weight: 900;
+  width: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.designercard {
+  justify-content: space-around;
+  margin: 100px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.cardtwo {
+  padding: 40px;
+  font-weight: 900;
+  font-size: 60px;
+  width: 500px;
+  height: 800px;
+  color: rgb(255, 255, 255) !important;
+  background-color: #20323b !important;
+  border-radius: 50px;
+  transition: letter-spacing 1s ease;
+  border-color: rgba(240, 248, 255, 0) !important;
+}
+
 .icon {
-  width: 50px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  padding: 2px;
+  box-shadow: 0 0 20px #20323b5d;
 }
 
-.icon:hover {
-  scale: 1.1;
+.container {
+  justify-content: space-around;
+  padding-top: 900px;
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 300px;
+  padding-right: 300px;
+  background-color: transparent;
 }
 
-.loading {
-  width: 500px;
-  height: 50px;
-  border-radius: 0px !important;
+.cardshow {
+  margin-bottom: 120px;
+  padding: 10px;
+  width: 800px;
+  height: 900px;
+  background-color: rgba(255, 255, 255, 0.336);
+  border-radius: 30px;
+  border: 4px solid #ffffff;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.137);
 }
 
-.loading::after {
-  width: 500px;
-  height: 50px;
-  border-radius: 0px !important;
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: 4px solid transparent;
+.cardimage {
+  border-radius: 20px;
 }
+
+.cardtext {
+  margin-left: 10px;
+  margin-top: 20px !important;
+  font-weight: 600;
+  color: #292929;
+  font-size: 20px;
+}
+
+.buttonback {
+  font-size: 20px;
+  border-radius: 50px;
+  margin-bottom: 120px;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.137);
+}
+
+/* Foot */
 
 .back {
   background-color: #000000 !important;
@@ -148,318 +203,29 @@
   width: 100%;
 }
 
-.journey {
-  /* height: 70px; */
-  border-radius: 100px;
-  font-size: 80px;
-  font-weight: 900;
-  color: #333333;
-}
-/* @keyframes scrollAnimation {
-  0% {
-    transform: translateX(100%);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
-} */
-
-.imagepop {
-  background-image: url("https://Mohanraj-Me.github.io/design/public/other/designold.png");
-  background-repeat: no-repeat; /* Ensure background image doesn't repeat */
-  background-size: cover; /* Specify the URL of the image directly */
-  width: 700px;
-  height: 282px;
+.in {
+  padding: 20px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #20323b;
 }
 
 .intotext {
-  color: #000000;
+  color: #ffffff;
   font-size: 20px;
-  /* width: 900px; */
+  text-align: center;
 }
 
-.butto {
-  color: #ffffff !important;
-  width: 450px;
-  height: 60px !important;
-  background-color: #000000 !important;
-  border-style: none !important;
+.footButton {
+  margin-top: 70px;
+  margin-left: 20px;
+  width: 500px;
+  height: 70px;
   border-radius: 50px !important;
-}
-
-.body {
-  overflow: hidden;
-}
-.twoCon {
-  display: flex;
-}
-
-.dev {
-  font-size: 150px;
-  font-weight: 900;
-  color: #ffffff;
-  background-color: #00000000 !important;
-  border-color: #00000000 !important;
-  transition: letter-spacing 1s ease;
-}
-
-.dev:hover {
-  color: #ffffff;
-  letter-spacing: 20px;
-}
-
-.devui {
-  font-size: 150px;
-  font-weight: 900;
-  color: #000000;
-  background-color: #00000000 !important;
-  border-color: #00000000 !important;
-  transition: letter-spacing 1s ease;
-}
-
-.devui:hover {
-  color: #000000;
-  letter-spacing: 20px;
-}
-
-.showcase {
-  background-color: #ffffff;
-  width: 100%;
-  /* padding-top: 50px; */
-  padding-bottom: 200px;
-  position: sticky;
-  top: 0;
-}
-
-.showcasein {
-  height: 900px;
-  background-color: #000000;
-  /* margin: 50px; */
-  margin-bottom: 50px;
-  margin-left: 50px;
-  margin-right: 50px;
-  border-radius: 50px;
-}
-
-.showcaseout {
-  /* width: 50%; */
-  height: 900px;
-  font-size: 100px;
-  color: #d3d3d3;
-  background-color: #00000000;
-  border-style: solid;
-  border-width: 2px;
-  border-color: #000000;
-  margin: 50px;
-  border-radius: 50px;
-}
-
-.showcaseoutin {
-  width: 50%;
-  height: 900px;
-  font-size: 100px;
-  color: #000000;
-  background-color: #00000000;
-  border-style: solid;
-  border-width: 2px;
-  border-color: #ffffff;
-  margin: 50px;
-  border-radius: 50px;
-}
-
-.showcasee {
-  font-size: 200px;
-  font-weight: 900;
-  color: rgb(227, 227, 227);
-  background-color: #ffffff;
-}
-
-.backtest {
-  z-index: -100;
-  position: fixed;
-  top: 0;
-  height: 100vh;
-  width: 100%;
-  background-color: #ffffff;
-}
-
-.showcaseee {
-  font-size: 400px;
-  font-weight: 900;
-  color: rgb(15, 15, 15);
-}
-
-.slideover {
-  height: 900px;
-  background-color: showcaseee#f8000000;
-}
-
-.in {
-  padding-top: 80px;
-  padding-bottom: 80px;
-  padding-left: 100px;
-  padding-right: 100px;
-}
-.showModal {
-  max-width: 100vh !important;
-}
-
-@media (max-width: 768px) {
-  .hero {
-    padding-top: 100px !important;
-    padding-bottom: 0px !important;
-    line-height: 50px !important;
-  }
-
-  .design {
-    font-size: 50px;
-  }
-
-  .button {
-    width: auto;
-    padding-left: 50px !important;
-    padding-right: 50px !important;
-    border-radius: 50px !important;
-    margin-left: 5px;
-  }
-
-  .heroTwo {
-    background-color: rgb(0, 0, 0);
-    padding-top: 100px !important;
-    padding-bottom: 100px !important;
-  }
-
-  .para {
-    text-align: start;
-    font-size: 15px;
-    letter-spacing: 1px;
-    line-height: 35px;
-    color: #ffffff !important;
-    width: auto;
-  }
-  .showcaseee {
-    text-align: center;
-    align-items: center;
-    line-height: 90px !important;
-    font-size: 80px;
-    /* height: 600px; */
-    font-weight: 900;
-    color: rgb(15, 15, 15);
-    /* background-color: #e4e4e4; */
-  }
-
-  .showcasein {
-    height: 400px;
-    background-color: #141414;
-    margin-bottom: 30px;
-    margin-left: 30px;
-    margin-right: 30px;
-    border-radius: 50px;
-  }
-  .showcaseout {
-    height: 400px;
-    background-color: #ffffff;
-    margin: 30px;
-    border-radius: 50px;
-    width: auto;
-  }
-  .showcaseoutin {
-    height: 400px;
-    margin: 30px;
-    margin-top: 60px;
-    width: auto;
-    color: #d3d3d3;
-    border-radius: 50px;
-    border-style: solid;
-    border-width: 1px;
-  }
-
-  .dev {
-    font-size: 40px;
-    font-weight: 900;
-    color: #ffffff;
-    background-color: #00000000 !important;
-    border-color: #00000000 !important;
-    transition: letter-spacing 1s ease;
-  }
-
-  .dev:hover {
-    color: #ffffff;
-    letter-spacing: 0px;
-  }
-
-  .devui {
-    font-size: 40px;
-    font-weight: 900;
-    color: #000000;
-    background-color: #00000000 !important;
-    border-color: #00000000 !important;
-    transition: letter-spacing 1s ease;
-  }
-
-  .devui:hover {
-    color: #000000;
-    letter-spacing: 00px;
-  }
-  .twoCon {
-    display: block;
-  }
-  .showcase {
-    background-color: #ffffff;
-    width: 100%;
-    /* padding-top: 100px; */
-    padding-bottom: 10px;
-  }
-  .back {
-    background-color: #000000 !important;
-    line-height: 100px !important;
-    padding-top: 50px;
-
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .scroll {
-    color: #141414;
-    font-size: 70px;
-    font-weight: 900;
-    width: 100%;
-    line-height: 60px;
-  }
-
-  .in {
-    padding: 20px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
-  .intotext {
-    color: #000000;
-    font-size: 15px;
-    /* width: 900px; */
-    text-align: center;
-  }
-
-  .butto {
-    color: #ffffff !important;
-    width: auto;
-    height: 50px !important;
-    background-color: #000000 !important;
-    border-style: none !important;
-    border-radius: 50px !important;
-  }
-
-  .backtest {
-    z-index: -100;
-    position: fixed;
-    top: 0;
-    height: 100vh;
-    width: 100%;
-    background-color: #ffffff;
-  }
-}
-.showModal {
-  max-width: 80vh !important;
-}
-
-@media (max-width: 1024px) {
+  font-size: 20px;
+  font-weight: 600;
+  border-style: none;
+  background-color: #f3f3f3 !important;
+  border-width: 5px;
+  color: #20323b !important;
 }
