--- a/app/caseone/page.module.css
+++ b/app/caseone/page.module.css
@@ -5,15 +5,16 @@
 }
 
 .freeze {
-  top: 10px; /* Adjust top position as needed */
-  /* height: 100vh; */
+  top: 10px;
   width: 100%;
   background-color: #ffffff;
 }
 
 .buttonback {
-  font-size: 25px;
+  font-size: 20px;
   border-radius: 50px;
+  margin-bottom: 120px;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.137) !important;
 }
 
 .work {
@@ -33,8 +34,7 @@
   }
 
   .freeze {
-    top: 50px; /* Adjust top position as needed */
-
+    top: 50px;
     width: 100%;
     background-color: #ffffff;
   }
@@ -46,7 +46,7 @@
 
   .work {
     background-color: #00000000;
-    margin-top: 50px;
+    margin-top: 100px;
     margin-bottom: 50px;
     margin-left: 50px;
     margin-right: 50px;
