--- a/app/contact/page.module.css
+++ b/app/contact/page.module.css
@@ -1,7 +1,7 @@
 .mail {
   font-size: 80px;
-
   font-weight: 900;
+  color: #20323b;
 }
 
 .text {
@@ -13,10 +13,10 @@
 .butto {
   font-size: 20px;
   font-weight: 900;
-  color: #ffffff !important;
+  color: #20323b !important;
   width: 100px;
   height: 100px !important;
-  background-color: #000000 !important;
+  background-color: #20323b !important;
   border-style: none !important;
   border-radius: 50px !important;
 }
@@ -24,10 +24,10 @@
 .butto:hover {
   font-size: 20px;
   font-weight: 900;
-  color: #ffffff !important;
+  color: #20323b !important;
   width: 100px;
   height: 100px !important;
-  background-color: #000000 !important;
+  background-color: #20323b !important;
   border-style: none !important;
   border-radius: 50px !important;
   padding-bottom: 15px;
@@ -44,7 +44,7 @@
 }
 
 .head {
-  color: #141414;
+  color: #20323b;
   font-size: 300px;
   font-weight: 900;
   width: 100%;
