--- a/app/header/page.module.css
+++ b/app/header/page.module.css
@@ -5,37 +5,26 @@
   top: 0;
   font-size: 25px;
   font-weight: 900;
-  height: 60px;
+  height: 80px;
   width: 100%;
-  background-color: #000000;
+  background-color: #ffffffaa;
   z-index: 5 !important;
-  /* backdrop-filter: blur(10px); */
+  backdrop-filter: blur(10px);
 }
 
 .home {
-  color: #ffffff !important;
+  color: #20323b !important;
   cursor: pointer;
-}
-
-.contact {
-  color: #000000 !important;
-  cursor: pointer;
-  font-size: 60px;
-  font-weight: 900 !important;
 }
 
 .contactme {
-  color: #000000 !important;
-  cursor: pointer;
-  background-color: rgb(255, 255, 255);
-  border-radius: 50px !important;
-}
-
-.button {
-  width: 200px;
+  font-size: 18px;
+  font-weight: 600;
   color: #ffffff !important;
+  cursor: pointer;
+  background-color: #20323b !important;
   border-radius: 50px !important;
-  background-color: rgb(0, 0, 0) !important;
+  border-style: none;
 }
 
 @media (max-width: 768px) {
