--- a/app/loading/page.module.css
+++ b/app/loading/page.module.css
@@ -5,15 +5,14 @@
   height: 100vh;
   font-size: 400px;
   font-weight: 900;
-  background-color: black;
-  color: rgb(16, 16, 16);
+  color: #eaeaea;
 }
 
 /* page.module.css */
 
 .dot {
   animation: blink 1s infinite;
-  color: rgb(255, 255, 255);
+  color: #20323b;
 }
 
 @keyframes blink {
