--- a/app/caseone/page.module.css
+++ b/app/caseone/page.module.css
@@ -1,6 +1,7 @@
-.title {
+.herotop {
+  margin-top: 100px;
   font-size: 120px;
-  color: #000000;
+  color: #20323b;
   font-weight: 900;
 }
 
@@ -11,10 +12,22 @@
 }
 
 .buttonback {
-  font-size: 20px;
+  font-size: 30px;
   border-radius: 50px;
-  margin-bottom: 120px;
+  margin-bottom: 70px;
+  margin-top: 40px;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.137) !important;
+  background-color: #ffffff;
+}
+
+.buttonback:hover {
+  font-size: 30px;
+  border-radius: 50px;
+  margin-bottom: 70px;
+  margin-top: 40px;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.137) !important;
+  background-color: #20323b;
+  color: #ffffff;
 }
 
 .work {
