--- a/app/header/page.module.css
+++ b/app/header/page.module.css
@@ -10,6 +10,7 @@
   background-color: #ffffffaa;
   z-index: 5 !important;
   backdrop-filter: blur(10px);
+  padding: 20px;
 }
 
 .home {
@@ -30,8 +31,16 @@
 @media (max-width: 768px) {
   /* Adjustments for smaller screens */
   .header {
+    position: sticky !important;
+    top: 0;
+    font-size: 25px;
+    font-weight: 900;
     height: 60px;
-    justify-content: space-between;
+    width: 100%;
+    background-color: #ffffffaa;
+    z-index: 5 !important;
+    backdrop-filter: blur(10px);
+    padding: 10px;
   }
 
   .button {
