--- a/app/homepage/page.module.css
+++ b/app/homepage/page.module.css
@@ -180,8 +180,8 @@
 }
 
 .cardtext {
-  margin-left: 10px;
-  margin-top: 20px !important;
+  text-align: justify;
+  margin: 20px !important;
   font-weight: 600;
   color: #292929;
   font-size: 16px;
